k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: nova
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gw
        image: us-central1-docker.pkg.dev/final-arquisoft/nova/api-gateway:latest # replace us-central1-docker.pkg.dev/final-arquisoft/nova
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m      # Request 0.1 CPU core
            memory: 128Mi  # Request 128MB RAM
          limits:
            cpu: 500m      # Limit to 0.5 CPU core
            memory: 512Mi  # Limit to 512MB RAM
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: nova
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
  - port: 8080
    targetPort: 8080
