k8s/user-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-product-svc
  namespace: nova
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ups
  template:
    metadata:
      labels:
        app: ups
    spec:
      containers:
      - name: ups
        image: us-central1-docker.pkg.dev/final-arquisoft/nova/user-product-svc:latest # replace us-central1-docker.pkg.dev/final-arquisoft/nova
        ports:
        - containerPort: 50052
        resources:
          requests:
            cpu: 100m      # Request 0.1 CPU core
            memory: 128Mi  # Request 128MB RAM
          limits:
            cpu: 400m      # Limit to 0.4 CPU core (handles more business logic)
            memory: 512Mi  # Limit to 512MB RAM
---
apiVersion: v1
kind: Service
metadata:
  name: user-product-svc
  namespace: nova
spec:
  type: ClusterIP
  selector:
    app: ups
  ports:
  - port: 50052
    targetPort: 50052
